videoaggregator: fix broken locking in update_src_caps function

We would unlock an already-unlocked mutex that we never re-locked.

https://bugzilla.gnome.org/show_bug.cgi?id=732750